--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,15 @@
 version: 2
 
 jobs:
-  deploy:
+  check-policies:
     docker:
-      - image: circleci/node:12
-    environment:
-      CLEVER_APP_ID: app_75256fce-3bbc-4cac-93d1-62a1a557fea7
+      - image: cloudcustodian/c7n
     steps:
       - checkout
-      - attach_workspace:
-          at: ./
-      - run:
-          name: Prepare deployment folder
-          command: |
-            mkdir ~/deploy
-            cd ~/deploy
-            cp ~/project/Dockerfile Dockerfile
-            git config --global user.email "dsi-ext@zenika.com"
-            git config --global user.name "Zenika"
-            git init
-            git add .
-            git commit -m "deploy!"
-      - run:
-          name: Deploy to Clever Cloud
-          working_directory: ~/deploy
-          command: |
-            sudo npm install --global clever-tools
-            clever login --secret=$CLEVER_SECRET --token=$CLEVER_TOKEN
-            clever link $CLEVER_APP_ID
-            clever deploy --force
+      - run: custodian run --verbose --output-dir ./output policy.yml
+
 workflows:
   version: 2
   deploy:
     jobs:
-      - deploy:
-          context: clever-cloud-zenika-dev
-          filters:
-            branches:
-              only: [master, ci]
+      - check-policies
