--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: ./
-      - run: node check-output.js ./output/*/resources.json
+      - run: bash -c 'node check-output.js ./output/*/resources.json'
 
 workflows:
   version: 2
