nightly check on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,6 @@ workflows:
     triggers:
       - schedule:
           cron: 0 7 * * 1-5
+          filters:
+            branches:
+              only: master
