:alembic: add ec2 policy

--- a/policy.yml
+++ b/policy.yml
@@ -8,3 +8,9 @@ policies:
       - type: group
         key: GroupName
         value: admins
+  - name: ec2-5-days-plus
+    resource: ec2
+    filters:
+      - type: instance-age
+        op: ge
+        minutes: 1
