--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,10 @@ version: 2.1
 
 jobs:
   run-policies:
+    parameters:
+      account:
+        description: "Which account we are running the policy check"
+        type: string
     docker:
       - image: cloudcustodian/c7n:0.8.44.2
     steps:
