--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
       # on region ap-east-1.
       # See https://github.com/boto/boto3/issues/2022
       - run: >
+          AWS_ACCESS_KEY_ID="$<< parameters.account >>_AWS_ACCESS_KEY_ID"
+          AWS_SECRET_ACCESS_KEY="$<< parameters.account >>_AWS_SECRET_ACCESS_KEY"
           custodian run 
           --output-dir ./output-<< parameters.account >> 
           --region ap-northeast-1 
