:sparkles: add ops account

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,19 +60,33 @@ workflows:
       - run-policies:
           name: run-policies-training
           account: training
+      - run-policies:
+          name: run-policies-ops
+          account: ops
       - check-policies:
           account: training
           requires:
             - run-policies-training
+      - check-policies:
+          account: ops
+          requires:
+            - run-policies-ops
   check-policies-nightly:
     jobs:
       - run-policies:
           name: run-policies-training
           account: training
+      - run-policies:
+          name: run-policies-ops
+          account: ops
       - check-policies:
           account: training
           requires:
             - run-policies-training
+      - check-policies:
+          account: ops
+          requires:
+            - run-policies-ops
     triggers:
       - schedule:
           cron: 0 7 * * 1-5
